# digifi-beta

./: LICENSE  README.md  pyproject.toml  requirements.txt  tests.py
docs/: conf.py  digifi.financial_instruments.rst  digifi.market_making.rst  digifi.stochastic_processes.rst  index.rst  modules.rst
docs/_build/doctrees/: digifi.corporate_finance.doctree  digifi.doctree  digifi.financial_instruments.doctree  digifi.lattice_based_models.doctree  digifi.market_making.doctree  digifi.pseudo_random_generators.doctree  digifi.stochastic_processes.doctree  digifi.utilities.doctree  environment.pickle
docs/_build/html/: digifi.lattice_based_models.html  digifi.portfolio_applications.html  digifi.utilities.html  search.html  searchindex.js
src/digifi/: __init__.py
src/digifi/corporate_finance/: capm.py  general.py  linear_regression_models.py
src/digifi/docs/: digifi.lattice_based_models.rst  digifi.rst  digifi.utilities.rst  doctring_style.md
src/digifi/financial_instruments/: bills_of_exchange.py  bonds.py  derivatives.py  derivatives_utils.py  general.py  rates_and_swaps.py  stocks.py
src/digifi/lattice_based_models/: binomial_models.py  general.py  trinomial_models.py
src/digifi/market_making/: amm.py  order_book.py
src/digifi/plots/: __init__.py  financial_instuments_plots.py  general_plots.py  portfolio_application_plots.py  pseudo_random_generators_plots.py  utilities.py  (+2 more)
tests/: __init__.py
tests/digifi/: general.py  test_capm_data.csv  test_corporate_finance.py  test_financial_instruments.py  test_lattice_based_models.py  test_market_making.py  test_portfolio_applications.py  test_portfolio_data.csv  test_stock_data.csv
(+47 files in other folders)
